-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 14
-
Component/s: hotspot
-
b21
-
ppc, s390x
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8236112 | 13u-cpu | Martin Doerr | P4 | Resolved | Fixed | master |
| JDK-8233461 | 13.0.2 | Martin Doerr | P4 | Resolved | Fixed | b03 |
| JDK-8269184 | 11.0.13-oracle | Ludvig Janiuk | P4 | Resolved | Fixed | b02 |
| JDK-8233108 | 11.0.6 | Martin Doerr | P4 | Resolved | Fixed | b01 |
One missing exception check was fixed in JDK-8229925, but there are more. We have still seen test failures in vmTestbase/nsk/jvmti/scenarios/capability/CM03/cm03t001 as described in that issue.
We should review VM calls from interpreter which skip the exception check.
We should review VM calls from interpreter which skip the exception check.
- backported by
-
JDK-8233108 [s390, PPC64] More exception checks missing in interpreter
-
- Resolved
-
-
JDK-8233461 [s390, PPC64] More exception checks missing in interpreter
-
- Resolved
-
-
JDK-8236112 [s390, PPC64] More exception checks missing in interpreter
-
- Resolved
-
-
JDK-8269184 [s390, PPC64] More exception checks missing in interpreter
-
- Resolved
-
- relates to
-
JDK-8229925 [s390, PPC64] Exception check missing in interpreter
-
- Resolved
-