8232005: [s390, PPC64] More exception checks missing in interpreter

Reviewed-by: rrich, goetz